# ModernAndroid

./: build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/src/androidTest/java/com/benedetto/geniusbankinterview/: ExampleInstrumentedTest.kt  MainActivityTest.kt
app/src/androidTest/java/com/benedetto/modernandroid/: ExampleInstrumentedTest.kt  MainActivityTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/benedetto/geniusbankinterview/: Application.kt  MainActivity.kt  Utils.kt
app/src/main/java/com/benedetto/geniusbankinterview/di/: AppModule.kt
app/src/main/java/com/benedetto/geniusbankinterview/presentation/: CounterViewModel.kt  LaunchListViewModel.kt  TransactionViewModel.kt  UserViewModel.kt
app/src/main/java/com/benedetto/modernandroid/: Application.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/benedetto/geniusbankinterview/: ExampleUnitTest.kt  UtilsUnitTest.kt
app/src/test/java/com/benedetto/modernandroid/: ExampleUnitTest.kt  UtilsUnitTest.kt
data/: build.gradle.kts
data/src/androidTest/java/com/benedetto/data/: ExampleInstrumentedTest.kt
data/src/main/java/com/benedetto/data/: DataLayer.kt
data/src/test/java/com/benedetto/data/: ExampleUnitTest.kt
domain/: build.gradle.kts
domain/src/androidTest/java/com/benedetto/core/: ExampleInstrumentedTest.kt
domain/src/androidTest/java/com/benedetto/domain/: ExampleInstrumentedTest.kt
domain/src/main/java/com/benedetto/domain/: DomainLayer.kt
domain/src/test/java/com/benedetto/core/: ExampleUnitTest.kt
domain/src/test/java/com/benedetto/domain/: ExampleUnitTest.kt
galoislibrary/: build.gradle.kts  proguard-rules.pro
galoislibrary/src/androidTest/java/com/benedetto/galoislibrary/: ExampleInstrumentedTest.kt
galoislibrary/src/main/cpp/: CMakeLists.txt
galoislibrary/src/main/cpp/jni/: galois-lib.c
galoislibrary/src/main/cpp/wolfssl/wolfssl/wolfcrypt/: settings.h
galoislibrary/src/main/java/com/benedetto/galoislibrary/: EncryptedText.kt  Galois.kt  GaloisLib.kt  KeyPair.kt
galoislibrary/src/test/java/com/benedetto/galoislibrary/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+52 files in other folders)
